--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
 		  <!--────social media links─────-->
 			 
 		  <div class="social-media">
-			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-twitter'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+			  <a href="https://youtu.be/_PJvpq8uOZM?si=KLQZ3b0XOVMSn7p-" target="_blank"><i class="fab fa-youtube"></i></a>
 		    </div>
 			 
 		 </section> 
@@ -79,11 +75,7 @@
 		   <h3>Contact.<hr></h3>
 		   <!--p>Feel free to contact me on my social media.</p-->
 		    <div class="social-media">
-			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-twitter'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+			  <a href="https://youtu.be/_PJvpq8uOZM?si=KLQZ3b0XOVMSn7p-" target="_blank"><i class="fab fa-youtube"></i></a>
 		    </div>
 		  </div>
 
