add contact form

--- a/index.html
+++ b/index.html
@@ -73,10 +73,19 @@
 	  <div id="contact">
 		  <!--────social media links─────-->
 		   <h3>Contact.<hr></h3>
-		   <!--p>Feel free to contact me on my social media.</p-->
 		    <div class="social-media">
-			  <a href="https://youtu.be/_PJvpq8uOZM?si=KLQZ3b0XOVMSn7p-" target="_blank"><i class="fab fa-youtube"></i></a>
 		    </div>
+		  <div style="font-size:1.5rem">Sign up for email updates!</div>
+	      <br></br>
+	      <form action="https://getform.io/f/8ed87345-f589-4ed7-b062-fa9a84b8e054" method="POST">
+		  <label for="fname">Name:</label>
+		  <input type="text" id="fname" name="fname">
+		  <br></br>
+		  <label for= "email">Email:</label>
+		  <input type="email" name="email" id="email">
+		  <br></br>
+		  <button type="submit">Send</button>
+	      </form>
 		  </div>
 
 	</main>
